Se sube el contenido solicitado

--- a/contacto.html
+++ b/contacto.html
@@ -4,24 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Tienda de Productos Artesanales</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
+    <div class="header">
     <h1>Contacta con nosotros</h1>
     <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="galeria.html">Galería</a></li>
+        <ul class="menu">
+            <li><a href="index.html"><img src="imagenes/boton%20inicio.png" alt="Inicio"></a></li>
+            <li><a href="productos.html"><img src="imagenes/boton%20productos.png" alt="Productos"></a></li>
         </ul>
     </nav>
+    </div>
 </header>
 <main>
     <section>
-        <h2>Información de contacto</h2>
-        <p>Correo electrónico: info@tiendadeartesanias.com</p>
-        <p>Teléfono: +XX XXX XXX XXX</p>
-        <p>Dirección: [Tu dirección]</p>
+        <h2>Formulario de Contacto</h2>
+        <form action="#" method="post">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required><br>
+
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" name="apellido" required><br>
+
+            <label for="direccion">Dirección:</label>
+            <input type="text" id="direccion" name="direccion"><br>
+
+            <label for="telefono">Teléfono de Contacto:</label>
+            <input type="text" id="telefono" name="telefono" required><br>
+
+            <label for="correo">Correo Electrónico:</label>
+            <input type="text" id="correo" name="correo" required><br>
+
+            <label for="comentarios">Comentarios:</label>
+            <textarea id="comentarios" name="comentarios" rows="4"></textarea><br>
+
+            <input type="submit" value="Enviar">
+        </form>
     </section>
 </main>
 <footer>
