--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Tienda de Productos Artesanales</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
+    <div class="header">
     <h1>Bienvenido a nuestra tienda de productos artesanales</h1>
     <nav>
-        <ul>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="galeria.html">Galería</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+        <ul class="menu">
+            <li><a href="productos.html"><img src="imagenes/boton%20productos.png" alt="Productos"></a></img></li>
+            <li><a href="contacto.html"><img src="imagenes/boton%20contacto.png" alt="Contacto"></a></img></li>
         </ul>
     </nav>
+    </div>
 </header>
 <main>
-    <p>Texto introductorio sobre tu tienda artesanal...</p>
+    <p style="background-color: black">Todos tus productos favoritos están en nuestra tienda. Envíos gratis por compras desde $29.990 en toda la RM</p>
+    <img class="logo" src="imagenes/logo.png" alt="Logo" width="1024" height="1024">
 </main>
 <footer>
     <p>Derechos de autor &copy; 2024 Tienda de Productos Artesanales</p>
