--- a/productos.html
+++ b/productos.html
@@ -4,32 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Tienda de Productos Artesanales</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
+    <div class="header">
     <h1>Nuestros productos</h1>
     <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="galeria.html">Galería</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+        <ul class="menu">
+            <li><a href="index.html"><img src="imagenes/boton%20inicio.png" alt="Inicio"></a></li>
+            <li><a href="contacto.html"><img src="imagenes/boton%20contacto.png" alt="Contacto"></a></li>
         </ul>
     </nav>
+    </div>
 </header>
 <main>
+    <div class="contenedor">
     <section>
-        <h2>Producto 1</h2>
-        <img src="ruta/a/imagen_producto_1.jpg" alt="Producto 1">
-        <p>Precio: $XX.XX</p>
-        <p>Stock: XX unidades</p>
+        <h2>Tetera Artesanal</h2>
+        <img class="img1" src="productos/imagen_producto_1.jpg" alt="Tetera artesanal de Cerámica">
+        <p>Precio: $9.990</p>
+        <p>Stock: 08 unidades</p>
     </section>
     <section>
-        <h2>Producto 2</h2>
-        <img src="ruta/a/imagen_producto_2.jpg" alt="Producto 2">
-        <p>Precio: $XX.XX</p>
-        <p>Stock: XX unidades</p>
+        <h2>Vasija Artesanal</h2>
+        <img class="img2" src="productos/imagen_producto_2.jpg" alt="Vasija Artesanal">
+        <p>Precio: $12.990</p>
+        <p>Stock: 10 unidades</p>
     </section>
-    <!-- Agrega más secciones según sea necesario para más productos -->
+    <section>
+        <h2>Collar grande</h2>
+        <img class="img3" src="productos/imagen_producto_3.jpg" alt="Collar Grande">
+        <p>Precio: $17.990</p>
+        <p>Stock: 02 unidades</p>
+    </section>
+    <section>
+        <h2>Atrapa Sueños</h2>
+        <img class="img4" src="productos/imagen_producto_4.jpg" alt="Atrapa Sueños">
+        <p>Precio: $18.990</p>
+        <p>Stock: 20 unidades</p>
+    </section>
+    </div><!-- Agrega más secciones según sea necesario para más productos -->
 </main>
 <footer>
     <p>Derechos de autor &copy; 2024 Tienda de Productos Artesanales</p>
